--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import ReloadPrompt from "../components/ReloadPrompt.astro";
 import { pwaInfo } from "virtual:pwa-info";
+import { FLAG } from '../config';
 
 export interface Props {
 	title: string;
@@ -8,11 +9,11 @@ export interface Props {
 
 const { title } = Astro.props;
 
+console.log(`* FLAG.mode: ${FLAG.mode}`);
 if (pwaInfo)
 	console.log(`* pwaInfo.pwaInDevEnvironment: ${pwaInfo.pwaInDevEnvironment}`);
 else
 	console.log(`* pwaInfo: ${pwaInfo}`);
-
 ---
 
 <!DOCTYPE html>
